--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -508,6 +508,10 @@
         "sab-btnreactor": "Reactor Button",
         "sab-btnoxygen": "O2 Button",
         "sab-btnlights": "Lights Button",
-        "sab-btncomms": "Comms Button"
+        "sab-btncomms": "Comms Button",
+        "data-sabreactor": "Reactor Sabotage",
+        "data-saboxygen": "O2 Sabotage",
+        "data-sablights": "Lights Sabotage",
+        "data-sabcomms": "Comms Sabotage"
     }
 }
